--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="pencil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pencil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8-pen-96" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\icons8-pen-96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-eraser-96" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\icons8-eraser-96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
